--- a/index.html
+++ b/index.html
@@ -577,6 +577,121 @@
                   </div>
                 </div>
               </div>
+              <!-- FAQ Item 4 -->
+              <div class="accordion-item shadow-sm mb-3">
+                <h2 class="accordion-header" id="headingFour">
+                  <button
+                    class="accordion-button collapsed fw-bold"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseFour"
+                    aria-expanded="false"
+                    aria-controls="collapseFour"
+                  >
+                    Who are the career counselors?
+                  </button>
+                </h2>
+                <div
+                  id="collapseFour"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="headingFour"
+                  data-bs-parent="#faqAccordion"
+                >
+                  <div class="accordion-body text-secondary">
+                    Our team consists of <strong>certified career counselors</strong>, 
+                    industry experts, and alumni from top universities like IITs, IIMs, 
+                    and Ivy League colleges. They bring years of experience and deep 
+                    domain knowledge to guide you effectively.
+                  </div>
+                </div>
+              </div>
+
+              <!-- FAQ Item 5 -->
+              <div class="accordion-item shadow-sm mb-3">
+                <h2 class="accordion-header" id="headingFive">
+                  <button
+                    class="accordion-button collapsed fw-bold"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseFive"
+                    aria-expanded="false"
+                    aria-controls="collapseFive"
+                  >
+                    Do you provide support for international universities?
+                  </button>
+                </h2>
+                <div
+                  id="collapseFive"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="headingFive"
+                  data-bs-parent="#faqAccordion"
+                >
+                  <div class="accordion-body text-secondary">
+                    Absolutely! We authorize a specialized team for 
+                    <strong>Study Abroad</strong> consulting that covers applicants 
+                    for the USA, UK, Canada, Australia, Germany, and more. From 
+                    university selection and SOP writing to visa assistance, we cover it all.
+                  </div>
+                </div>
+              </div>
+
+              <!-- FAQ Item 6 -->
+              <div class="accordion-item shadow-sm mb-3">
+                <h2 class="accordion-header" id="headingSix">
+                  <button
+                    class="accordion-button collapsed fw-bold"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseSix"
+                    aria-expanded="false"
+                    aria-controls="collapseSix"
+                  >
+                    Do you help with scholarship applications?
+                  </button>
+                </h2>
+                <div
+                  id="collapseSix"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="headingSix"
+                  data-bs-parent="#faqAccordion"
+                >
+                  <div class="accordion-body text-secondary">
+                    Yes, ensuring financial feasibility is part of our guidance. 
+                    We assist you in identifying relevant scholarships, 
+                    financial aid programs, and education loans that suit your 
+                    profile and ensure you have the best chance of securing funding.
+                  </div>
+                </div>
+              </div>
+
+              <!-- FAQ Item 7 -->
+              <div class="accordion-item shadow-sm mb-3">
+                <h2 class="accordion-header" id="headingSeven">
+                  <button
+                    class="accordion-button collapsed fw-bold"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseSeven"
+                    aria-expanded="false"
+                    aria-controls="collapseSeven"
+                  >
+                    Can I change my counselor if I'm not satisfied?
+                  </button>
+                </h2>
+                <div
+                  id="collapseSeven"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="headingSeven"
+                  data-bs-parent="#faqAccordion"
+                >
+                  <div class="accordion-body text-secondary">
+                    Your satisfaction is our priority. If you feel that your 
+                    counselor is not the right fit for you, you can request a 
+                    change after the first session. We will assign a senior 
+                    mentor to review your case and ensure your needs are met.
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
