Added about.html and contactUs.html

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#whatwedo">What We Do</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact Us</a>
+              <a class="nav-link" href="contactUs.html">Contact Us</a>
             </li>
           </ul>
 
@@ -698,48 +698,7 @@
       </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="contact-section py-5">
-      <div class="container py-4">
-        <h2 class="text-center mb-4 fw-bold text-white">
-          Partnering in Your Journey
-        </h2>
-        <div class="row justify-content-center">
-          <div class="col-lg-10">
-            <p class="contact-text mb-5">
-              "Your aspirations are our priority. Whether you are a student
-              dreaming of big universities, a parent seeking guidance, or an
-              institution looking for collaboration, our promise is to support
-              you every step of the way. We are with you for the long run—let’s
-              take the first step towards success together."
-            </p>
-            <div class="text-center mb-5">
-              <a href="mailto:support@careersaathi.com" class="btn-contact-lg">
-                Get in Touch <i class="bi bi-arrow-right ms-2"></i>
-              </a>
-            </div>
 
-            <div class="text-center">
-              <h5 class="text-white mb-4">Connect With Us</h5>
-              <div class="social-links d-flex justify-content-center gap-3">
-                <a href="#" class="social-btn"
-                  ><i class="bi bi-facebook"></i
-                ></a>
-                <a href="#" class="social-btn"
-                  ><i class="bi bi-twitter-x"></i
-                ></a>
-                <a href="#" class="social-btn"
-                  ><i class="bi bi-instagram"></i
-                ></a>
-                <a href="#" class="social-btn"
-                  ><i class="bi bi-linkedin"></i
-                ></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!-- Footer Section -->
     <footer class="footer pt-5">
@@ -761,7 +720,7 @@
             <h5 class="footer-title">Quick Links</h5>
             <ul class="list-unstyled">
               <li><a href="#home" class="footer-link">Home</a></li>
-              <li><a href="#about" class="footer-link">About Us</a></li>
+              <li><a href="about.html" class="footer-link">About Us</a></li>
               <li><a href="#whatwedo" class="footer-link">What We Do</a></li>
               <li><a href="#resources" class="footer-link">Resources</a></li>
             </ul>
