--- a/about.html
+++ b/about.html
@@ -185,7 +185,7 @@
             <p class="text-secondary small">
               Subscribe to get latest career tips and updates.
             </p>
-            <div class="input-group">
+            <div class="d-flex gap-2">
               <input
                 type="text"
                 class="form-control"
