--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#whatwedo">What We Do</a>
+              <a class="nav-link" href="whattodo.html">What We Do</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contactUs.html">Contact Us</a>
