--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
             <ul class="list-unstyled">
               <li><a href="#home" class="footer-link">Home</a></li>
               <li><a href="about.html" class="footer-link">About Us</a></li>
-              <li><a href="#whatwedo" class="footer-link">What We Do</a></li>
+              <li><a href="whatwedo.html" class="footer-link">What We Do</a></li>
               <li><a href="#resources" class="footer-link">Resources</a></li>
             </ul>
           </div>
