--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+#﻿<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -50,7 +50,7 @@
               <a class="nav-link active" aria-current="page" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#whatwedo">What We Do</a>
+              <a class="nav-link" href="whatwedo.html">What We Do</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contactUs.html">Contact Us</a>
