--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
             <h4 class="footer-title">
               Career<span class="text-warning">Saathi</span>
             </h4>
-            <p class="text-secondary mb-4">
+            <p class="mb-4" style="color: #cccccc;">
               Empowering students to achieve their dreams through expert
               guidance and personalized career counseling.
             </p>
@@ -739,7 +739,7 @@
           <!-- Newsletter (Optional/Simple) -->
           <div class="col-lg-3 col-md-6">
             <h5 class="footer-title">Stay Updated</h5>
-            <p class="text-secondary small">
+            <p class="small" style="color: #cccccc;">
               Subscribe to get latest career tips and updates.
             </p>
             <div class="d-flex gap-2">
