--- a/contactUs.html
+++ b/contactUs.html
@@ -76,13 +76,13 @@
     <!-- Contact Section -->
     <section id="contact" class="contact-section py-5">
       <div class="container py-4">
-        <h2 class="text-center mb-4 fw-bold text-dark">
+        <h2 class="text-center mb-4 fw-bold text-light">
           Partnering in Your Journey
         </h2>
         <div class="row justify-content-center">
           <div class="col-lg-6">
             <div class="contact-form-wrapper shadow-lg">
-              <h2 class="text-center mb-4 fw-bold text-dark">Get in Touch</h2>
+              <h2 class="text-center mb-4 fw-bold text-light">Get in Touch</h2>
               <form>
                 <div class="row g-3">
                   <div class="col-md-6">
@@ -117,7 +117,7 @@
             </div>
 
             <div class="text-center mt-5">
-              <h5 class="text-dark mb-4">Connect With Us</h5>
+              <h5 class="text-light mb-4">Connect With Us</h5>
               <div class="social-links d-flex justify-content-center gap-3">
                 <a href="#" class="social-btn"><i class="bi bi-facebook"></i></a>
                 <a href="#" class="social-btn"><i class="bi bi-twitter-x"></i></a>
@@ -139,7 +139,7 @@
             <h4 class="footer-title">
               Career<span class="text-warning">Saathi</span>
             </h4>
-            <p class="text-secondary mb-4">
+            <p class="mb-4" style="color: #cccccc;">
               Empowering students to achieve their dreams through expert
               guidance and personalized career counseling.
             </p>
@@ -169,7 +169,7 @@
           <!-- Newsletter (Optional/Simple) -->
           <div class="col-lg-3 col-md-6">
             <h5 class="footer-title">Stay Updated</h5>
-            <p class="text-secondary small">
+            <p class="small" style="color: #cccccc;">
               Subscribe to get latest career tips and updates.
             </p>
             <div class="d-flex gap-2">
