--- a/whatwedo.html
+++ b/whatwedo.html
@@ -159,8 +159,69 @@
 
     <!-- Footer -->
     <footer class="footer pt-5">
-      <div class="container text-center">
-        <p class="mb-0">&copy; 2026 CareerSaathi. All rights reserved.</p>
+      <div class="container">
+        <div class="row g-4">
+          <!-- Brand Info -->
+          <div class="col-lg-4 col-md-6">
+            <h4 class="footer-title">
+              Career<span class="text-warning">Saathi</span>
+            </h4>
+            <p class="mb-4" style="color: #cccccc;">
+              Empowering students to achieve their dreams through expert
+              guidance and personalized career counseling.
+            </p>
+          </div>
+
+          <!-- Quick Links -->
+          <div class="col-lg-2 col-md-6">
+            <h5 class="footer-title">Quick Links</h5>
+            <ul class="list-unstyled">
+              <li><a href="index.html" class="footer-link">Home</a></li>
+              <li><a href="about.html" class="footer-link">About Us</a></li>
+              <li><a href="whatwedo.html" class="footer-link">What We Do</a></li>
+              <li><a href="index.html#resources" class="footer-link">Resources</a></li>
+            </ul>
+          </div>
+
+          <!-- Legal -->
+          <div class="col-lg-3 col-md-6">
+            <h5 class="footer-title">Legal</h5>
+            <ul class="list-unstyled">
+              <li><a href="#" class="footer-link">Privacy Policy</a></li>
+              <li><a href="#" class="footer-link">Terms & Conditions</a></li>
+              <li><a href="#" class="footer-link">Cookie Policy</a></li>
+            </ul>
+          </div>
+
+          <!-- Newsletter (Optional/Simple) -->
+          <div class="col-lg-3 col-md-6">
+            <h5 class="footer-title">Stay Updated</h5>
+            <p class="small" style="color: #cccccc;">
+              Subscribe to get latest career tips and updates.
+            </p>
+            <div class="d-flex gap-2">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Email Address"
+              />
+              <button class="btn btn-warning" type="button">
+                <i class="bi bi-send-fill"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Copyright -->
+      <div class="footer-bottom text-center">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-12">
+              <p class="mb-0">&copy; 2026 CareerSaathi. All rights reserved.</p>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
 
