--- a/contactUs.html
+++ b/contactUs.html
@@ -74,15 +74,15 @@
 
     <!-- Contact Section -->
     <!-- Contact Section -->
-    <section id="contact" class="contact-section py-5">
+    <section id="contact" class="contact-section py-5" style="margin-top: 30px;">
       <div class="container py-4">
-        <h2 class="text-center mb-4 fw-bold text-light">
+        <h2 class="text-center mb-4 fw-bold text-dark">
           Partnering in Your Journey
         </h2>
         <div class="row justify-content-center">
           <div class="col-lg-6">
             <div class="contact-form-wrapper shadow-lg">
-              <h2 class="text-center mb-4 fw-bold text-light">Get in Touch</h2>
+              <h2 class="text-center mb-4 fw-bold text-dark">Get in Touch</h2>
               <form>
                 <div class="row g-3">
                   <div class="col-md-6">
@@ -117,7 +117,7 @@
             </div>
 
             <div class="text-center mt-5">
-              <h5 class="text-light mb-4">Connect With Us</h5>
+              <h5 class="text-dark mb-4">Connect With Us</h5>
               <div class="social-links d-flex justify-content-center gap-3">
                 <a href="#" class="social-btn"><i class="bi bi-facebook"></i></a>
                 <a href="#" class="social-btn"><i class="bi bi-twitter-x"></i></a>
